--- a/module4-logistic-regression/Jake_Dennis_LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/Jake_Dennis_LS_DS_214_assignment.ipynb
@@ -208,16 +208,16 @@
       "metadata": {
         "id": "E2p6ni5GToXz",
         "colab_type": "code",
+        "outputId": "085e7768-1a67-4ef9-951d-3bdc39a5accb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 241
-        },
-        "outputId": "085e7768-1a67-4ef9-951d-3bdc39a5accb"
+        }
       },
       "source": [
         "df.head()"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -640,11 +640,11 @@
       "metadata": {
         "id": "NbeoeeOCVGD1",
         "colab_type": "code",
+        "outputId": "71ca07ae-b3bc-478c-9ca6-5a31d63d4803",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "71ca07ae-b3bc-478c-9ca6-5a31d63d4803"
+        }
       },
       "source": [
         "df['Date'] = pd.to_datetime(df['Date'], infer_datetime_format=True)\n",
@@ -654,7 +654,7 @@
         "test = df[df['Date'].dt.year > 2017]\n",
         "df['Great'].value_counts()"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -687,18 +687,18 @@
       "metadata": {
         "id": "OoHI11khUcQv",
         "colab_type": "code",
+        "outputId": "c7def764-45f0-4644-b53f-2eb2a850136b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "c7def764-45f0-4644-b53f-2eb2a850136b"
+        }
       },
       "source": [
         "target = 'Great'\n",
         "y_train = train[target]\n",
         "y_train.value_counts(normalize=True)"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -721,18 +721,18 @@
       "metadata": {
         "id": "U7hjL5bUZB6o",
         "colab_type": "code",
+        "outputId": "f271a464-24d7-4558-cf5c-a60b0fe1f811",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "f271a464-24d7-4558-cf5c-a60b0fe1f811"
+        }
       },
       "source": [
         "majority_class = y_train.mode()[0]\n",
         "y_pred = [majority_class] * len(y_train)\n",
         "y_pred"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1050,18 +1050,18 @@
       "metadata": {
         "id": "AMC_h6UUZwOz",
         "colab_type": "code",
+        "outputId": "7bbded41-72e8-4493-d7d9-6a6496c3cdd4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "7bbded41-72e8-4493-d7d9-6a6496c3cdd4"
+        }
       },
       "source": [
         "from sklearn.metrics import accuracy_score\n",
         "\n",
         "accuracy_score(y_train, y_pred)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1082,18 +1082,18 @@
       "metadata": {
         "id": "uwtEVSD8Z0Jh",
         "colab_type": "code",
+        "outputId": "a7492f8d-67a1-4dd9-e5c4-61042734a63c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a7492f8d-67a1-4dd9-e5c4-61042734a63c"
+        }
       },
       "source": [
         "y_val = validate[target]\n",
         "y_pred = [majority_class] * len(y_val)\n",
         "accuracy_score(y_val, y_pred)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1114,16 +1114,16 @@
       "metadata": {
         "id": "8jQNuT1ec22k",
         "colab_type": "code",
+        "outputId": "3d293191-4424-426e-b5d7-760703e506af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        },
-        "outputId": "3d293191-4424-426e-b5d7-760703e506af"
+        }
       },
       "source": [
         "df.isnull().sum()"
       ],
-      "execution_count": 13,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1213,26 +1213,30 @@
       "metadata": {
         "id": "WCK8jDgQUevh",
         "colab_type": "code",
+        "outputId": "a016bf72-1066-4189-9b6d-ddbf3556e62e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "81d2a9d1-d735-415e-8985-3f9522fe9856"
+        }
       },
       "source": [
         "from sklearn.impute import SimpleImputer\n",
         "from sklearn.linear_model import LogisticRegression\n",
+        "from sklearn.preprocessing import StandardScaler\n",
         "features = ['Synergy', 'Uniformity', 'Tortilla']\n",
         "X_train = train[features]\n",
         "X_val = validate[features]\n",
         "imputer = SimpleImputer(strategy='mean')\n",
         "X_train_imputed = imputer.fit_transform(X_train)\n",
         "X_val_imputed = imputer.transform(X_val)\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train_imputed)\n",
+        "X_val_scaled = scaler.transform(X_val_imputed)\n",
         "log_reg = LogisticRegression(solver='lbfgs')\n",
-        "log_reg.fit(X_train_imputed, y_train)\n",
-        "print('Validation Accuracy', log_reg.score(X_val_imputed, y_val))"
+        "log_reg.fit(X_train_scaled, y_train)\n",
+        "print('Validation Accuracy', log_reg.score(X_val_scaled, y_val))"
       ],
-      "execution_count": 14,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -1258,25 +1262,26 @@
       "metadata": {
         "id": "Barp568RUiP-",
         "colab_type": "code",
+        "outputId": "ef9eebc0-0157-4095-a90f-ea50d36ed9bb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "a3e9a0fc-e2ed-48df-f280-da0d477f8088"
+        }
       },
       "source": [
         "y_test = test[target]\n",
         "X_test = test[features]\n",
         "X_test_imputed = imputer.fit_transform(X_test)\n",
+        "X_test_scaled = scaler.transform(X_test_imputed)\n",
         "log_reg.fit(X_test_imputed, y_test)\n",
-        "print('Test Accuracy', log_reg.score(X_test_imputed, y_test))"
+        "print('Test Accuracy', log_reg.score(X_test_scaled, y_test))"
       ],
-      "execution_count": 15,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Test Accuracy 0.8421052631578947\n"
+            "Test Accuracy 0.42105263157894735\n"
           ],
           "name": "stdout"
         }
