--- a/module4-logistic-regression/Jake_Dennis_LS_DS_214_assignment.ipynb
+++ b/module4-logistic-regression/Jake_Dennis_LS_DS_214_assignment.ipynb
@@ -1213,7 +1213,7 @@
       "metadata": {
         "id": "WCK8jDgQUevh",
         "colab_type": "code",
-        "outputId": "a016bf72-1066-4189-9b6d-ddbf3556e62e",
+        "outputId": "3ba61806-038e-4eff-e3ec-8100a0722a85",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1226,17 +1226,18 @@
         "features = ['Synergy', 'Uniformity', 'Tortilla']\n",
         "X_train = train[features]\n",
         "X_val = validate[features]\n",
-        "imputer = SimpleImputer(strategy='mean')\n",
+        "imputer = SimpleImputer()\n",
         "X_train_imputed = imputer.fit_transform(X_train)\n",
         "X_val_imputed = imputer.transform(X_val)\n",
         "scaler = StandardScaler()\n",
         "X_train_scaled = scaler.fit_transform(X_train_imputed)\n",
         "X_val_scaled = scaler.transform(X_val_imputed)\n",
-        "log_reg = LogisticRegression(solver='lbfgs')\n",
+        "log_reg = LogisticRegression()\n",
+        "\n",
         "log_reg.fit(X_train_scaled, y_train)\n",
         "print('Validation Accuracy', log_reg.score(X_val_scaled, y_val))"
       ],
-      "execution_count": 17,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1262,7 +1263,7 @@
       "metadata": {
         "id": "Barp568RUiP-",
         "colab_type": "code",
-        "outputId": "ef9eebc0-0157-4095-a90f-ea50d36ed9bb",
+        "outputId": "3875eac7-cabf-4181-fa39-d9bbd6a9945a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -1273,15 +1274,15 @@
         "X_test = test[features]\n",
         "X_test_imputed = imputer.fit_transform(X_test)\n",
         "X_test_scaled = scaler.transform(X_test_imputed)\n",
-        "log_reg.fit(X_test_imputed, y_test)\n",
+        "\n",
         "print('Test Accuracy', log_reg.score(X_test_scaled, y_test))"
       ],
-      "execution_count": 18,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Test Accuracy 0.42105263157894735\n"
+            "Test Accuracy 0.8421052631578947\n"
           ],
           "name": "stdout"
         }
