--- a/Martin_Campbell_DS15_LS_DS_211_assignment.ipynb
+++ b/Martin_Campbell_DS15_LS_DS_211_assignment.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "Martin Campbell DS15 LS_DS_211_assignment.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
