--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "LS_DS_213_assignment.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyP2/0d6KuJpDiwbkGRPmpom",
+      "authorship_tag": "ABX9TyM1ewB/9+5D0m5of8eYq3kP",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2969,19 +2969,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 135
         },
-        "outputId": "12828638-b3bb-4e44-a8ed-107ed0dedb2b"
+        "outputId": "73176b1b-f064-429b-e411-8662cde1e6d9"
       },
       "source": [
         "from sklearn.feature_selection import SelectKBest\n",
         "\n",
-        "selector = SelectKBest(k=10)\n",
+        "selector = SelectKBest(k=49)\n",
         "\n",
         "X_train_selected = selector.fit_transform(X_train_1, y_train)\n",
         "X_test_selected = selector.transform(X_test_1)\n",
         "\n",
         "# got rid of ease-ment column"
       ],
-      "execution_count": 105,
+      "execution_count": 151,
       "outputs": [
         {
           "output_type": "stream",
@@ -3066,7 +3066,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 862
         },
-        "outputId": "f1adb443-cd2e-4a18-a5b1-2a151737010c"
+        "outputId": "cd6b1e68-c2d2-4f2b-fff6-afadd14c362d"
       },
       "source": [
         "selected_mask = selector.get_support()\n",
@@ -3083,33 +3083,23 @@
         "for name in unselected_names:\n",
         "  print (name)\n"
       ],
-      "execution_count": 106,
+      "execution_count": 152,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Features selected:\n",
-            "borough_1\n",
-            "neighborhood_ASTORIA\n",
-            "building_class_at_present_A3\n",
-            "building_class_at_present_S0\n",
-            "building_class_at_present_B3\n",
-            "apartment_number_nan\n",
-            "apartment_number_RP.\n",
-            "building_class_at_time_of_sale_A3\n",
-            "building_class_at_time_of_sale_A6\n",
-            "building_class_at_time_of_sale_S0\n",
-            "\n",
-            "Features excluded:\n",
             "borough_3\n",
             "borough_4\n",
             "borough_2\n",
             "borough_5\n",
+            "borough_1\n",
             "neighborhood_OTHER\n",
             "neighborhood_FLUSHING-NORTH\n",
             "neighborhood_BEDFORD STUYVESANT\n",
             "neighborhood_FOREST HILLS\n",
             "neighborhood_BOROUGH PARK\n",
+            "neighborhood_ASTORIA\n",
             "building_class_category_01 ONE FAMILY DWELLINGS\n",
             "tax_class_at_present_1\n",
             "tax_class_at_present_1D\n",
@@ -3120,11 +3110,16 @@
             "building_class_at_present_A5\n",
             "building_class_at_present_A0\n",
             "building_class_at_present_A2\n",
+            "building_class_at_present_A3\n",
             "building_class_at_present_S1\n",
             "building_class_at_present_A4\n",
             "building_class_at_present_A6\n",
             "building_class_at_present_A8\n",
             "building_class_at_present_B2\n",
+            "building_class_at_present_S0\n",
+            "building_class_at_present_B3\n",
+            "apartment_number_nan\n",
+            "apartment_number_RP.\n",
             "zip_code\n",
             "residential_units\n",
             "commercial_units\n",
@@ -3137,9 +3132,14 @@
             "building_class_at_time_of_sale_A5\n",
             "building_class_at_time_of_sale_A0\n",
             "building_class_at_time_of_sale_A2\n",
+            "building_class_at_time_of_sale_A3\n",
             "building_class_at_time_of_sale_S1\n",
             "building_class_at_time_of_sale_A4\n",
-            "building_class_at_time_of_sale_A8\n"
+            "building_class_at_time_of_sale_A6\n",
+            "building_class_at_time_of_sale_A8\n",
+            "building_class_at_time_of_sale_S0\n",
+            "\n",
+            "Features excluded:\n"
           ],
           "name": "stdout"
         }
@@ -3162,7 +3162,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Scenario 1: on test/train dataset after 1-hot encoding"
+        "Scenario 1: on all features"
       ]
     },
     {
@@ -3236,7 +3236,7 @@
         "colab_type": "text"
       },
       "source": [
-        "Scenario 2: on test/train dataset after 1-hot encoding and selecting Kbest 10"
+        "Scenario 2: on kbest k features\n"
       ]
     },
     {
@@ -3267,22 +3267,38 @@
           "base_uri": "https://localhost:8080/",
           "height": 33
         },
-        "outputId": "e5c36e82-b802-45bd-e8f0-170f234f243e"
+        "outputId": "931ae202-7013-44b0-c44a-8f8c2adb500e"
       },
       "source": [
         "from sklearn.metrics import mean_absolute_error\n",
         "mae = mean_absolute_error(y_pred, y_train)\n",
         "print(f'Train Mean Absolute Error: ${mae:,.0f}')\n"
       ],
-      "execution_count": 114,
+      "execution_count": 154,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train Mean Absolute Error: $205,735\n"
+            "Train Mean Absolute Error: $154,500\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "C-ykZHd0eEou",
+        "colab_type": "text"
+      },
+      "source": [
+        "MAE (train)\n",
+        "- k=5 -> 214K\n",
+        "- k=10 -> 206K\n",
+        "- k=15 -> 185K\n",
+        "- k=20 -> 178K\n",
+        "- k=30 -> 173K\n",
+        "- k=50 -> 154K"
       ]
     },
     {
@@ -3307,6 +3323,7 @@
         "outputId": "73104dd9-a8d6-499d-e3e4-f8d4ed4d25e1"
       },
       "source": [
+        "# scenario 1: all features\n",
         "y_pred = ridge.predict(X_test_1)\n",
         "mae = mean_absolute_error(y_pred, y_test)\n",
         "print(f'Test Mean Absolute Error: ${mae:,.0f}')"
@@ -3320,6 +3337,50 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_i_p5a7EYeDh",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 33
+        },
+        "outputId": "113182e0-1d31-473b-bbb8-7ee11c2971a8"
+      },
+      "source": [
+        "# scenario 2: used Kbest = k\n",
+        "y_pred = ridge.predict(X_test_selected)\n",
+        "mae = mean_absolute_error(y_pred, y_test)\n",
+        "print(f'Test Mean Absolute Error: ${mae:,.0f}')"
+      ],
+      "execution_count": 155,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Test Mean Absolute Error: $159,443\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "a5VjF9lfegA0",
+        "colab_type": "text"
+      },
+      "source": [
+        "MAE (train)\n",
+        "- k=5 -> 212K\n",
+        "- k=10 -> 207K\n",
+        "- k=15 -> 177K\n",
+        "- k=20 -> 172K\n",
+        "- k=30 -> 173K\n",
+        "- k=50 -> 159K"
       ]
     },
     {
