--- a/Martin_Campbell_DS15_LS_DS_214_assignment.ipynb
+++ b/Martin_Campbell_DS15_LS_DS_214_assignment.ipynb
@@ -70,8 +70,8 @@
         "- [x] Begin with baselines for classification.\n",
         "- [x] Use scikit-learn for logistic regression.\n",
         "- [x] Get your model's validation accuracy. (Multiple times if you try multiple iterations.)\n",
-        "- [ ] Get your model's test accuracy. (One time, at the end.)\n",
-        "- [ ] Commit your notebook to your fork of the GitHub repo.\n",
+        "- [x] Get your model's test accuracy. (One time, at the end.)\n",
+        "- [x] Commit your notebook to your fork of the GitHub repo.\n",
         "\n",
         "\n",
         "## Stretch Goals\n",
@@ -2555,7 +2555,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "28469135-c2fd-44fa-e6de-a074cd1b5b0e"
+        "outputId": "787f574a-0d35-46e1-a788-03ea816599fc"
       },
       "source": [
         "features = ['Yelp', 'Google', 'Cost', 'Temp', 'Synergy', 'Uniformity']\n",
@@ -2580,9 +2580,11 @@
         "\n",
         "imputer = SimpleImputer(strategy='mean')\n",
         "X_train_imputed = imputer.fit_transform(X_train_encoded)\n",
-        "X_val_imputed = imputer.transform(X_val_encoded)X_train_encoded.head()"
+        "X_val_imputed = imputer.transform(X_val_encoded)\n",
+        "\n",
+        "X_train_encoded.head()"
       ],
-      "execution_count": 53,
+      "execution_count": 91,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2676,7 +2678,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 53
+          "execution_count": 91
         }
       ]
     },
@@ -2753,6 +2755,100 @@
             "tags": []
           },
           "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "43fG4KZbhPR5",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 651
+        },
+        "outputId": "f75fc224-e5c1-4c3f-bf85-24b047635eab"
+      },
+      "source": [
+        "y_pred = model.predict(X_train_scaled)\n",
+        "y_pred"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ True, False, False, False,  True,  True, False, False,  True,\n",
+              "       False, False, False, False,  True, False,  True,  True,  True,\n",
+              "        True, False, False,  True, False,  True,  True, False, False,\n",
+              "        True,  True, False, False, False, False, False, False, False,\n",
+              "       False, False, False,  True, False, False,  True, False,  True,\n",
+              "       False, False, False, False, False,  True,  True, False,  True,\n",
+              "        True, False, False, False,  True,  True,  True, False, False,\n",
+              "       False,  True, False,  True,  True,  True,  True,  True, False,\n",
+              "        True,  True, False, False, False, False, False, False, False,\n",
+              "        True,  True,  True, False,  True, False,  True, False, False,\n",
+              "       False, False, False,  True, False,  True,  True,  True,  True,\n",
+              "       False, False, False,  True, False,  True,  True,  True,  True,\n",
+              "       False, False,  True,  True, False, False, False, False, False,\n",
+              "       False, False, False,  True, False,  True,  True, False, False,\n",
+              "       False, False,  True,  True,  True, False,  True,  True,  True,\n",
+              "        True, False, False, False, False,  True, False,  True,  True,\n",
+              "        True,  True, False, False,  True,  True,  True, False,  True,\n",
+              "       False, False,  True, False,  True, False,  True, False,  True,\n",
+              "        True,  True, False,  True,  True, False, False,  True, False,\n",
+              "        True, False, False, False, False,  True,  True, False,  True,\n",
+              "       False, False,  True,  True, False,  True, False,  True, False,\n",
+              "        True, False, False, False, False, False,  True, False,  True,\n",
+              "       False, False, False,  True, False,  True,  True, False, False,\n",
+              "        True, False, False,  True,  True,  True, False, False, False,\n",
+              "       False,  True,  True, False, False, False,  True, False, False,\n",
+              "        True, False, False,  True,  True,  True,  True, False,  True,\n",
+              "       False, False, False, False, False,  True,  True,  True, False,\n",
+              "        True,  True, False, False, False, False, False,  True,  True,\n",
+              "        True, False,  True, False, False, False, False, False, False,\n",
+              "        True,  True,  True, False, False,  True, False, False,  True,\n",
+              "       False,  True, False, False, False,  True, False, False,  True,\n",
+              "       False, False,  True,  True, False,  True,  True,  True, False,\n",
+              "        True,  True,  True,  True, False, False, False, False, False,\n",
+              "        True])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gqwXamWYhejq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "e44f1a1c-dfe3-400c-c5ee-c2d9e52f096e"
+      },
+      "source": [
+        "accuracy_score(y_train, y_pred)"
+      ],
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.8355704697986577"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 77
         }
       ]
     },
@@ -2840,6 +2936,8 @@
         "colab": {}
       },
       "source": [
+        "# copied from Titanic example\n",
+        "\n",
         "# 1. Import estimator class\n",
         "from sklearn.linear_model import LinearRegression\n",
         "\n",
@@ -2880,63 +2978,202 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UNg47RwzXwyo",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "X_test = test[features]\n",
-        "X_test_encoded = encoder.transform(X_test)\n",
-        "X_test_imputed = imputer.transform(X_test_encoded)\n",
-        "X_test_scaled = scaler.transform(X_test_imputed)\n",
-        "y_pred = model.predict(X_test_scaled)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "RD91sLz5Yj0k",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "submission = test[['']].copy()\n",
-        "submission['Survived'] = y_pred"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "HFENtJBNX1eh",
+        "id": "YGbn5R6rMy4D",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 329
+          "height": 206
         },
-        "outputId": "8fe17d66-4157-4b0b-b2bf-09c2511d6e20"
+        "outputId": "10c9a55c-fa35-4137-8258-3ac0610da603"
+      },
+      "source": [
+        "X_train = train[features]\n",
+        "y_train = train[target]\n",
+        "\n",
+        "X_test = test[features]\n",
+        "y_test = test[target]\n",
+        "\n",
+        "X_train.shape, y_train.shape, X_test.shape, y_test.shape\n",
+        "\n",
+        "encoder = ce.OneHotEncoder(use_cat_names=True)\n",
+        "X_train_encoded = encoder.fit_transform(X_train)\n",
+        "X_test_encoded = encoder.transform(X_test)\n",
+        "\n",
+        "imputer = SimpleImputer(strategy='mean')\n",
+        "X_train_imputed = imputer.fit_transform(X_train_encoded)\n",
+        "X_test_imputed = imputer.transform(X_test_encoded)\n",
+        "\n",
+        "X_train_encoded.head()"
+      ],
+      "execution_count": 106,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Yelp</th>\n",
+              "      <th>Google</th>\n",
+              "      <th>Cost</th>\n",
+              "      <th>Temp</th>\n",
+              "      <th>Synergy</th>\n",
+              "      <th>Uniformity</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>3.5</td>\n",
+              "      <td>4.2</td>\n",
+              "      <td>6.49</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>4.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>3.5</td>\n",
+              "      <td>3.3</td>\n",
+              "      <td>5.45</td>\n",
+              "      <td>3.5</td>\n",
+              "      <td>2.5</td>\n",
+              "      <td>4.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>4.85</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>3.0</td>\n",
+              "      <td>4.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>5.25</td>\n",
+              "      <td>2.0</td>\n",
+              "      <td>4.0</td>\n",
+              "      <td>5.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>4.0</td>\n",
+              "      <td>3.8</td>\n",
+              "      <td>6.59</td>\n",
+              "      <td>5.0</td>\n",
+              "      <td>4.5</td>\n",
+              "      <td>5.0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   Yelp  Google  Cost  Temp  Synergy  Uniformity\n",
+              "0   3.5     4.2  6.49   5.0      4.0         4.0\n",
+              "1   3.5     3.3  5.45   3.5      2.5         4.0\n",
+              "2   NaN     NaN  4.85   2.0      3.0         4.0\n",
+              "3   NaN     NaN  5.25   2.0      4.0         5.0\n",
+              "4   4.0     3.8  6.59   5.0      4.5         5.0"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 106
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "z4brDgJbNFDQ",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 110
+        },
+        "outputId": "2db18cb3-cac1-45d3-b9d2-32d66726b7d7"
+      },
+      "source": [
+        "imputer = SimpleImputer(strategy='mean')\n",
+        "X_train_imputed = imputer.fit_transform(X_train_encoded)\n",
+        "X_test_imputed = imputer.transform(X_test_encoded)\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "X_train_scaled = scaler.fit_transform(X_train_imputed)\n",
+        "X_test_scaled = scaler.transform(X_test_imputed)\n",
+        "\n",
+        "model = LogisticRegression()\n",
+        "model.fit(X_train_scaled, y_train)"
+      ],
+      "execution_count": 107,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+              "                   intercept_scaling=1, l1_ratio=None, max_iter=100,\n",
+              "                   multi_class='auto', n_jobs=None, penalty='l2',\n",
+              "                   random_state=None, solver='lbfgs', tol=0.0001, verbose=0,\n",
+              "                   warm_start=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 107
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5rEHXeC3NeS4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "outputId": "37742c59-24fc-463b-e89e-52bfa38af654"
       },
       "source": [
         "y_pred = model.predict(X_test_scaled)\n",
-        "accuracy_score(y_validate, y_pred)"
+        "accuracy_score(y_test, y_pred)"
       ],
-      "execution_count": 72,
+      "execution_count": 108,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-72-73505f435760>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0maccuracy_score\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX_test_scaled\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36maccuracy_score\u001b[0;34m(y_true, y_pred, normalize, sample_weight)\u001b[0m\n\u001b[1;32m    183\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    184\u001b[0m     \u001b[0;31m# Compute accuracy for each possible representation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 185\u001b[0;31m     \u001b[0my_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_check_targets\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    186\u001b[0m     \u001b[0mcheck_consistent_length\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_true\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_pred\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msample_weight\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    187\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0my_type\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstartswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'multilabel'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/sklearn/metrics/_classification.py\u001b[0m in \u001b[0;36m_check_targets\u001b[0;34m(y_true, y_pred)\u001b[0m\n\u001b[1;32m     88\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my_type\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m         raise ValueError(\"Classification metrics can't handle a mix of {0} \"\n\u001b[0;32m---> 90\u001b[0;31m                          \"and {1} targets\".format(type_true, type_pred))\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m     \u001b[0;31m# We can't have more than one value on y_type => The set is no more needed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Classification metrics can't handle a mix of continuous-multioutput and binary targets"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7631578947368421"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 108
         }
       ]
     }
