--- a/module2-regression-2/Manhattan_Neighborhoods.ipynb
+++ b/module2-regression-2/Manhattan_Neighborhoods.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Manhattan_Neighborhoods.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMDlO4m9TZ1JmyBGzSn0a0P",
+      "authorship_tag": "ABX9TyO4YBp9dJKt1h9l8BIyxRdd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,11 +107,14 @@
         "outputId": "c33969d8-51a7-45b1-90d1-966adec89b4f"
       },
       "source": [
-        "# Construct a dataframe for them. Latitudes and longitudes will be NaNs as \n",
-        "# placeholders, to be filled in later.\n",
+        "# Get's a table of Manhattan neighborhoods from an HTML table scraped from a website on average\n",
+        "# rents by neighborhood (https://www.rentcafe.com/average-rent-market-trends/us/ny/manhattan/).\n",
         "neighborhoods = pd.DataFrame(pd.read_html('https://raw.githubusercontent.com/karencfisher/DS-Unit-2-Linear-Models/master/module2-regression-2/rents.html')[0])\n",
+        "\n",
+        "# Create NaN placeholders for latitude and longitude\n",
         "neighborhoods['latitude'] = np.NaN\n",
         "neighborhoods['longitude'] = np.NaN\n",
+        "\n",
         "neighborhoods"
       ],
       "execution_count": 85,
