--- a/module2-regression-2/Manhattan_Neighborhoods.ipynb
+++ b/module2-regression-2/Manhattan_Neighborhoods.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Manhattan_Neighborhoods.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO4YBp9dJKt1h9l8BIyxRdd",
+      "authorship_tag": "ABX9TyOFPw4S+I4VirDqBsX9o4Jl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 285
+          "height": 265
         },
         "outputId": "e516001b-a44a-4eae-cc18-54f958593232"
       },
@@ -79,21 +79,16 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "O8wBO6AVeywD",
-        "colab_type": "code",
-        "colab": {}
+        "id": "5DPVaXMIMKkk",
+        "colab_type": "text"
       },
       "source": [
-        "# Fill in google maps API key to us the API. That will require open an account\n",
-        "# with Google, create a project and enable geolocation and geocode APIs, and\n",
-        "# obtain an API key.\n",
-        "API_key = 'yourAPIkeyhere'\n",
-        "gmaps = googlemaps.Client(key=API_key)\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+        "In order to get a list of Manhattan neighborhoods, ordered by average rent, I scraped an HTML file from a website (https://www.rentcafe.com/average-rent-market-trends/us/ny/manhattan/). I found the HTML for the table, copied into a new HTML file, and then read it into a Pandas Dataframe. \n",
+        "\n",
+        "Then, add columns for latitude and longtitude, filling them initially as NaNs."
+      ]
     },
     {
       "cell_type": "code",
@@ -107,7 +102,7 @@
         "outputId": "c33969d8-51a7-45b1-90d1-966adec89b4f"
       },
       "source": [
-        "# Get's a table of Manhattan neighborhoods from an HTML table scraped from a website on average\n",
+        "# Gets a table of Manhattan neighborhoods from an HTML table scraped from a website on average\n",
         "# rents by neighborhood (https://www.rentcafe.com/average-rent-market-trends/us/ny/manhattan/).\n",
         "neighborhoods = pd.DataFrame(pd.read_html('https://raw.githubusercontent.com/karencfisher/DS-Unit-2-Linear-Models/master/module2-regression-2/rents.html')[0])\n",
         "\n",
@@ -570,6 +565,37 @@
           "execution_count": 85
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1alcEs3pLcgI",
+        "colab_type": "text"
+      },
+      "source": [
+        "Next we will use Google Maps APIs to get the central coordinates for each neighborhood.\n",
+        "\n",
+        "This will require one obtain an API key from Google. It has a trial year with credit of $300 (often some of their services of course normally cost something). Once you have an account, you create a project, and then enable the geocode API for that project. You can then obtain the API key to access it.\n",
+        "\n",
+        "https://developers.google.com/maps/documentation/geocoding/get-api-key"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "O8wBO6AVeywD",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Fill in google maps API key to us the API. That will require open an account\n",
+        "# with Google, create a project and enable geolocation and geocode APIs, and\n",
+        "# obtain an API key.\n",
+        "API_key = 'yourAPIkeyhere'\n",
+        "gmaps = googlemaps.Client(key=API_key)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
